Залил нарпавления: Москва и Питер

--- a/_dev/tmpl/inc/tour-section.html
+++ b/_dev/tmpl/inc/tour-section.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="col-md-2 col-sm-4 col-xs-6">
-                    <a href="#" class="tour__link">
+                    <a href="russia-tour.html" class="tour__link">
                         <div class="tour__ico">
                             <svg xmlns="http://www.w3.org/2000/svg" class="ico-tour">
                                 <use xlink:href="img/sprite.svg#russian-tour"></use>
