--- a/_dev/tmpl/index.html
+++ b/_dev/tmpl/index.html
@@ -24,7 +24,7 @@
                 <a href="#" class="top-nav__link top-nav__link_active">Главная</a>
                 <a href="about.html" class="top-nav__link">О&nbsp;компании</a>
                 <a href="#" class="top-nav__link">Отдых зарубежом</a>
-                <a href="#" class="top-nav__link">Отдых в&nbsp;России</a>
+                <a href="russia-tour.html" class="top-nav__link">Отдых в&nbsp;России</a>
                 <a href="#" class="top-nav__link">Отзывы</a>
                 <a href="#" class="top-nav__link">Акции</a>
                 <a href="#" class="top-nav__link">Контакты</a>
