--- a/_dev/tmpl/about.html
+++ b/_dev/tmpl/about.html
@@ -24,7 +24,7 @@
                 <a href="/" class="top-nav__link">Главная</a>
                 <a href="#" class="top-nav__link top-nav__link_active">О&nbsp;компании</a>
                 <a href="#" class="top-nav__link">Отдых зарубежом</a>
-                <a href="#" class="top-nav__link">Отдых в&nbsp;России</a>
+                <a href="russia-tour.html" class="top-nav__link">Отдых в&nbsp;России</a>
                 <a href="#" class="top-nav__link">Отзывы</a>
                 <a href="#" class="top-nav__link">Акции</a>
                 <a href="#" class="top-nav__link">Контакты</a>
