--- a/_dev/tmpl/bus-tour.html
+++ b/_dev/tmpl/bus-tour.html
@@ -22,9 +22,9 @@
         <div class="col-md-8 hide-tablet">
             <nav class="top-nav">
                 <a href="/" class="top-nav__link">Главная</a>
-                <a href="#" class="top-nav__link">О&nbsp;компании</a>
+                <a href="about.html" class="top-nav__link">О&nbsp;компании</a>
                 <a href="#" class="top-nav__link top-nav__link_active">Отдых зарубежом</a>
-                <a href="#" class="top-nav__link">Отдых в&nbsp;России</a>
+                <a href="russia-tour.html" class="top-nav__link">Отдых в&nbsp;России</a>
                 <a href="#" class="top-nav__link">Отзывы</a>
                 <a href="#" class="top-nav__link">Акции</a>
                 <a href="#" class="top-nav__link">Контакты</a>
