--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                 <a href="#" class="top-nav__link top-nav__link_active">Главная</a>
                 <a href="about.html" class="top-nav__link">О&nbsp;компании</a>
                 <a href="#" class="top-nav__link">Отдых зарубежом</a>
-                <a href="#" class="top-nav__link">Отдых в&nbsp;России</a>
+                <a href="russia-tour.html" class="top-nav__link">Отдых в&nbsp;России</a>
                 <a href="#" class="top-nav__link">Отзывы</a>
                 <a href="#" class="top-nav__link">Акции</a>
                 <a href="#" class="top-nav__link">Контакты</a>
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="col-md-2 col-sm-4 col-xs-6">
-                    <a href="#" class="tour__link">
+                    <a href="russia-tour.html" class="tour__link">
                         <div class="tour__ico">
                             <svg xmlns="http://www.w3.org/2000/svg" class="ico-tour">
                                 <use xlink:href="img/sprite.svg#russian-tour"></use>
