--- a/public/russia-tour.html
+++ b/public/russia-tour.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="libs/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/all.css" type="text/css">
-    <title>О компании Аника Тур</title>
+    <title>Отдых в Росси, экскурсионные туры по России</title>
 
 </head>
 <body>
@@ -75,9 +75,9 @@
         <div class="col-md-8 hide-tablet">
             <nav class="top-nav">
                 <a href="/" class="top-nav__link">Главная</a>
-                <a href="#" class="top-nav__link top-nav__link_active">О&nbsp;компании</a>
+                <a href="about.html" class="top-nav__link">О&nbsp;компании</a>
                 <a href="#" class="top-nav__link">Отдых зарубежом</a>
-                <a href="russia-tour.html" class="top-nav__link">Отдых в&nbsp;России</a>
+                <a href="#" class="top-nav__link top-nav__link_active">Отдых в&nbsp;России</a>
                 <a href="#" class="top-nav__link">Отзывы</a>
                 <a href="#" class="top-nav__link">Акции</a>
                 <a href="#" class="top-nav__link">Контакты</a>
@@ -119,25 +119,64 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="section-title">О компании</h1>
+                <h1 class="section-title">Экскурсионные туры по России</h1>
                 <hr class="accent-line">
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <p>
-                    Вы&nbsp;хотели отдохнуть на&nbsp;песчаных пляжах солнечной Греции или Кипра? А&nbsp;может&nbsp;Вы
-                    хотели побывать в&nbsp;уникальной культурной столице России-Санкт-Петербурге? Или Вы&nbsp;любитель
-                    активного отдыха? Какой&nbsp;бы Вы&nbsp;не&nbsp;предпочитали отдых, мы&nbsp;будем рады встрече с&nbsp;Вами
-                    в&nbsp;нашем офисе. Туристическое агентство &laquo;Аника-тур&raquo;- это динамично развивающееся
-                    компания. Круглый год мы&nbsp;организуем отдых и&nbsp;экскурсии для взрослых и&nbsp;детей по&nbsp;различным
-                    направлениям и&nbsp;на&nbsp;любой бюджет. Нашими партнерами являются только проверенные
-                    туроператоры. Мы&nbsp;с&nbsp;радостью окажем Вам помощь в&nbsp;организации качественного отдыха,
-                    поможем с&nbsp;оформлением визы, с&nbsp;приобретение авиа и&nbsp;ж\д билетов.
-                </p>
-                <p class="accent center">
-                    &laquo;Мы&nbsp;работаем, чтобы&nbsp;Вы отдыхали&raquo;
-                </p>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+               <a href="moscow-tour.html" class="card">
+                   <div class="card__header">
+                       <h2>Туры в Москву</h2>
+                   </div>
+                   <div class="card__body">
+                       <img src="img/moscow.jpg" alt="Туры в Москву">
+                   </div>
+               </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <a href="peter-tour.html" class="card">
+                    <div class="card__header">
+                        <h2>Туры в Санкт-Петербург</h2>
+                    </div>
+                    <div class="card__body">
+                        <img src="img/peter.jpg" alt="Туры в Санкт-Петербург">
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <a href="#" class="card">
+                    <div class="card__header">
+                        <h2>Туры в Казань</h2>
+                    </div>
+                    <div class="card__body">
+                        <img src="img/kazan.jpg" alt="Туры в Казань">
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <a href="#" class="card">
+                    <div class="card__header">
+                        <h2>Туры в Крым</h2>
+                    </div>
+                    <div class="card__body">
+                        <img src="img/krim.jpg" alt="Туры в Крым">
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <a href="#" class="card">
+                    <div class="card__header">
+                        <h2>Туры в Калининград</h2>
+                    </div>
+                    <div class="card__body">
+                        <img src="img/kaliningrad.jpg" alt="Туры в Калининград">
+                    </div>
+                </a>
             </div>
         </div>
     </div>
