Сделал стр. Казань, Крым, Калининград

--- a/_dev/tmpl/inc/footer.html
+++ b/_dev/tmpl/inc/footer.html
@@ -11,7 +11,8 @@
                             </svg>
                         </div>
                         <p class="main-footer__txt">
-                            Россия, г.&nbsp;Пермь, ул.&nbsp;Ленина&nbsp;60, оф.&nbsp;777
+                            Россия, г.&nbsp;Пермь, ул.&nbsp;Ленина&nbsp;10, оф.&nbsp;4<br>
+                            2 этаж, вход с ул. Пермская
                         </p>
                     </div>
                     <div class="main-footer__item">
@@ -21,7 +22,7 @@
                             </svg>
                         </div>
                         <p class="main-footer__txt">
-                            +7&nbsp;(342)&nbsp;227&nbsp;7&nbsp;700
+                            +7&nbsp;(342)&nbsp;247&nbsp;66&nbsp;22, 298&nbsp;20&nbsp;04
                         </p>
                     </div>
                 </div>
