--- a/_dev/tmpl/inc/toolbar.html
+++ b/_dev/tmpl/inc/toolbar.html
@@ -9,8 +9,8 @@
                         </svg>
                     </div>
                     <div class="header__txt">
-                        ул. Ленина, 60<br>
-                        оф. 777
+                        ул. Ленина, 10<br>
+                        2 этаж, оф. 4
                     </div>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                         </svg>
                     </div>
                     <div class="header__txt">
-                        <span>+7(342)</span>&nbsp;227&nbsp;7&nbsp;700700
+                        <span>+7(342)</span>&nbsp;247&nbsp;66&nbsp;22
                         <div class="header__btn hide-mobile">
                             <a href="#" class="btn btn-action">Позвонить нам</a>
                         </div>
