--- a/_dev/tmpl/russia-tour.html
+++ b/_dev/tmpl/russia-tour.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <a href="#" class="card">
+                <a href="kazan-tour.html" class="card">
                     <div class="card__header">
                         <h2>Туры в Казань</h2>
                     </div>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <a href="#" class="card">
+                <a href="krim-tour.html" class="card">
                     <div class="card__header">
                         <h2>Туры в Крым</h2>
                     </div>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <a href="#" class="card">
+                <a href="kaliningrad-tour.html" class="card">
                     <div class="card__header">
                         <h2>Туры в Калининград</h2>
                     </div>
