--- a/public/about.html
+++ b/public/about.html
@@ -21,8 +21,8 @@
                         </svg>
                     </div>
                     <div class="header__txt">
-                        ул. Ленина, 60<br>
-                        оф. 777
+                        ул. Ленина, 10<br>
+                        2 этаж, оф. 4
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                         </svg>
                     </div>
                     <div class="header__txt">
-                        <span>+7(342)</span>&nbsp;227&nbsp;7&nbsp;700700
+                        <span>+7(342)</span>&nbsp;247&nbsp;66&nbsp;22
                         <div class="header__btn hide-mobile">
                             <a href="#" class="btn btn-action">Позвонить нам</a>
                         </div>
@@ -156,7 +156,8 @@
                             </svg>
                         </div>
                         <p class="main-footer__txt">
-                            Россия, г.&nbsp;Пермь, ул.&nbsp;Ленина&nbsp;60, оф.&nbsp;777
+                            Россия, г.&nbsp;Пермь, ул.&nbsp;Ленина&nbsp;10, оф.&nbsp;4<br>
+                            2 этаж, вход с ул. Пермская
                         </p>
                     </div>
                     <div class="main-footer__item">
@@ -166,7 +167,7 @@
                             </svg>
                         </div>
                         <p class="main-footer__txt">
-                            +7&nbsp;(342)&nbsp;227&nbsp;7&nbsp;700
+                            +7&nbsp;(342)&nbsp;247&nbsp;66&nbsp;22, 298&nbsp;20&nbsp;04
                         </p>
                     </div>
                 </div>
