--- a/_dev/tmpl/peter-tour.html
+++ b/_dev/tmpl/peter-tour.html
@@ -58,7 +58,7 @@
                         <th colspan="3">Экскурсионные туры в Санкт Петербург, сбор группы в Санкт Петербурге.</th>
                     </tr>
                     <tr>
-                        <th colspan="3"><span class="left">Программы на 3 дня</span></th>
+                        <th colspan="3" class="left">Программы на 3 дня</th>
                     </tr>
                     <tr>
                         <td>
@@ -137,7 +137,7 @@
                     </tr>
 
                     <tr>
-                        <th colspan="3"><span class="left">Программы на 5 дней</span></th>
+                        <th colspan="3" class="left">Программы на 5 дней</th>
                     </tr>
 
                     <tr>
@@ -261,7 +261,7 @@
                     </tr>
 
                     <tr>
-                        <th colspan="3"><span class="left">Туры на 7 дней</span></th>
+                        <th colspan="3" class="left">Туры на 7 дней</th>
                     </tr>
 
                     <tr>
