Добавил золотое кольцо + пермский край

--- a/_dev/tmpl/russia-tour.html
+++ b/_dev/tmpl/russia-tour.html
@@ -98,6 +98,17 @@
                     </div>
                 </a>
             </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <a href="gold-ring-tour.html" class="card">
+                    <div class="card__header">
+                        <h2>Золотое кольцо</h2>
+                    </div>
+                    <div class="card__body">
+                        <img src="img/gold-ring.jpg" alt="Золотое кольцо">
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </section>
