--- a/public/about.html
+++ b/public/about.html
@@ -182,8 +182,8 @@
                                 </svg>
                             </div>
                             <p class="main-footer__txt">
-                                Будни с 9:00 до 19:00<br>
-                                Суббот с 10:00 до 16:00, без перерыва на обед
+                                Будни с 10:00 до 19:00<br>
+                                Суббот с 11:00 до 15:00
                             </p>
                         </div>
                         <h5 class="main-footer__title main-footer__title_pad-l">Воскресенье <span>выходной</span></h5>
