--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
                 </div>
 
                 <div class="col-md-2 col-sm-4 col-xs-6">
-                    <a href="#" class="tour__link">
+                    <a href="perm-tour.html" class="tour__link">
                         <div class="tour__ico">
                             <svg xmlns="http://www.w3.org/2000/svg" class="ico-tour">
                                 <use xlink:href="img/sprite.svg#perm-tour"></use>
@@ -392,8 +392,8 @@
                                 </svg>
                             </div>
                             <p class="main-footer__txt">
-                                Будни с 9:00 до 19:00<br>
-                                Суббот с 10:00 до 16:00, без перерыва на обед
+                                Будни с 10:00 до 19:00<br>
+                                Суббот с 11:00 до 15:00
                             </p>
                         </div>
                         <h5 class="main-footer__title main-footer__title_pad-l">Воскресенье <span>выходной</span></h5>
