--- a/public/russia-tour.html
+++ b/public/russia-tour.html
@@ -178,6 +178,17 @@
                     </div>
                 </a>
             </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <a href="gold-ring-tour.html" class="card">
+                    <div class="card__header">
+                        <h2>Золотое кольцо</h2>
+                    </div>
+                    <div class="card__body">
+                        <img src="img/gold-ring.jpg" alt="Золотое кольцо">
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </section>
@@ -221,8 +232,8 @@
                                 </svg>
                             </div>
                             <p class="main-footer__txt">
-                                Будни с 9:00 до 19:00<br>
-                                Суббот с 10:00 до 16:00, без перерыва на обед
+                                Будни с 10:00 до 19:00<br>
+                                Суббот с 11:00 до 15:00
                             </p>
                         </div>
                         <h5 class="main-footer__title main-footer__title_pad-l">Воскресенье <span>выходной</span></h5>
